# pypilot-pilots-logic

./: .clang-format  CMakeLists.txt  README.md  library.properties
.github/workflows/: arduino.yml  linux.yml
examples/arduino/PilotsLogicExample/: PilotsLogicExample.ino
examples/linux/: compute_basic.cpp
include/: pypilot_pilots_logic.hpp
include/pypilot_pilots_logic/: absolute_pilot.hpp  basic_pilot.hpp  gain.hpp  math_helpers.hpp  pilot_select.hpp  pilots_logic.hpp  rate_pilot.hpp  simple_pilot.hpp  source_priority.hpp  stale.hpp  types.hpp  vmg_pilot.hpp  wind_pilot.hpp
src/: absolute_pilot.cpp  apb_nav.cpp  basic_pilot.cpp  gain.cpp  gps_pilot.cpp  math_helpers.cpp  pilot_select.cpp  pilots_logic.cpp  pypilot_pilots_logic.hpp  pypilot_pilots_logic_arduino.cpp  rate_pilot.cpp  simple_pilot.cpp  source_priority.cpp  vmg_pilot.cpp  wind_pilot.cpp
src/pypilot_algorithms/: mode_state.hpp  tack.hpp
src/pypilot_pilots_logic/: absolute_pilot.cpp  absolute_pilot.hpp  apb_nav.hpp  gain.cpp  gain.hpp  gps_pilot.cpp  gps_pilot.hpp  logging.hpp  mode_state.hpp  pilot_select.hpp  pilots_logic.cpp  pilots_logic.hpp  pilots_logic_impl_00.inc  pilots_logic_impl_01.inc  pilots_logic_impl_02.inc  pilots_logic_impl_03.inc  pilots_logic_impl_04.inc  pilots_logic_impl_05.inc  rate_pilot.cpp  servo_rudder.hpp  simple_pilot.cpp  simple_pilot.hpp  source_arbitration.hpp  source_priority.hpp  stale.hpp  tack.hpp  types.hpp  vmg_pilot.cpp  wind_pilot.cpp
tests/: test_absolute_pilot.cpp  test_apb_nav.cpp  test_basic_pilot.cpp  test_gain.cpp  test_gps_pilot.cpp  test_mode_state.cpp  test_pilot_select.cpp  test_pilots_logic.cpp  test_rate_pilot.cpp  test_sensor_filters.cpp  test_servo_feedback.cpp  test_shared_algorithm_usage.cpp  test_simple_pilot.cpp  test_source_arbitration.cpp  test_source_priority.cpp  test_stale.cpp  test_tack.cpp  test_vmg_pilot.cpp  test_wind_pilot.cpp
